[package]
edition = "2021"
name = "or-challenge"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
debug = 0
lto = "fat"
opt-level = 3
overflow-checks = false

[dependencies]
chrono = "0.4.19"
fastrand = "1.7.0"
itertools = "0.10.3"
num_cpus = "1.13.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.82"

[features]
# default = ["supersafe"]
default = []
supersafe = []
